2006-09-25  Christian Persch  <chpe@cvs.gnome.org>

	* data/playlist.glade:
	* data/properties.glade:
	* data/screenshot.glade:
	* data/skip_to.glade:
	* data/totem.glade:
	* data/uri.glade: Minor HIG tweaks. Bug #355516.

2006-09-25  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* po/POTFILES.in: remove earlier removed files
	* src/totem-menu.c: (totem_ui_manager_setup): add missing i18n macros
	(Closes: #357515)

2006-09-23  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb),
	(bacon_video_widget_open_with_subtitle), (bacon_video_widget_play),
	(bvw_stop_play_pipeline), (bacon_video_widget_pause),
	(bacon_video_widget_is_playing):
	  Pause playback while we are re-buffering (#356860). Might only
	  work correctly with -base CVS.

2006-09-22  Christian Persch  <chpe@cvs.gnome.org>

	* browser-plugin/totemPlugin.cpp:
	* src/totem-mozilla-options.h:
	* src/totem-mozilla-viewer.c: (parse_xid), (main):
	Use GOption for argument parsing in the plugin viewer. Bug #338954.

2006-09-21  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* src/totem.c: (on_channels_change_event): update stream properties
	when channels-changed event is fired (Closes: #354974)

2006-09-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c: (cb_resize): don't try to set a size
	if the width or height is negative (Closes: #355594)
	

2006-09-21  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* data/totem.glade:
	* src/bacon-volume.c: (bacon_volume_scale_value_changed):
	* src/totem-stock-icons.c: (totem_set_default_icons),
	(totem_named_icons_init): use stock (or themed) volume icons in
	full-screen volume slider; fix names of stock volume icons. (Closes:
	#356444)

	* data/Makefile.am:
	* data/rhythmbox-volume-max.png:
	* data/rhythmbox-volume-zero.png: remove no longer needed icons

2006-09-20  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* src/totem-playlist.c: (totem_playlist_save_files): use the builtin